Add config-based testing setup with Fake Store API tests
- Add environment config system (qa.config.js with CONFIG_FILE support)
- Create main test suite (fakestore.test.js) with all CRUD operations
- Add test results directory setup (ignored by git)
- Rename examples and templates to .js (excluded from test runs)
- Update ApiHelper to support config objects
- Add test:output script for saving test results
- Update documentation with usage examples

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@ yarn.lock
 coverage/
 *.lcov
 
+# Test results
+test-results/
+test-output.txt
+test-report.json
+*.test-results.txt
+
 # Environment variables
 .env
 .env.local
