--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose",
+    "test:qa": "CONFIG_FILE=qa.config jest --verbose",
+    "test:output": "jest --verbose --json --outputFile=test-results/test-output.json > test-results/test-output.txt 2>&1 || true && cat test-results/test-output.txt",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
