--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -26,6 +26,8 @@ jobs:
       
       - name: Run tests with coverage
         run: npm run test:coverage
+        env:
+          NODE_ENV: ci
       
       - name: Upload coverage report
         if: always()
