--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,8 @@ jobs:
       
       - name: Run tests
         run: npm test
+        env:
+          NODE_ENV: ci
       
       - name: Upload test report
         if: always()
@@ -49,8 +51,9 @@ jobs:
           retention-days: 30
       
       - name: Comment PR with test results
-        if: github.event_name == 'pull_request' && always()
+        if: github.event_name == 'pull_request'
         uses: actions/github-script@v7
+        continue-on-error: true
         with:
           script: |
             const fs = require('fs');
