Add DummyJSON API support with comprehensive test suite
- Added baseURL2 for DummyJSON API (https://dummyjson.com)
- Created dummyEndpoints configuration for DummyJSON endpoints
- Added comprehensive DummyJSON test suite (14 tests covering CRUD operations)
- Updated package.json with test:dummy and test:fakestore scripts
- Fixed config loader to properly export configuration properties
- All tests passing: DummyJSON (14/14) and Fake Store (11/11)
- DummyJSON API is CI/CD friendly with no rate limiting

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "jest --verbose",
     "test:qa": "CONFIG_FILE=qa.config jest --verbose",
+    "test:dummy": "CONFIG_FILE=qa.config jest tests/dummyjson.test.js --verbose",
+    "test:fakestore": "CONFIG_FILE=qa.config jest tests/fakestore.test.js --verbose",
     "test:report": "npm test && open test-results/test-report.html",
     "test:output": "jest --verbose --json --outputFile=test-results/test-output.json > test-results/test-output.txt 2>&1 || true && cat test-results/test-output.txt",
     "test:watch": "jest --watch",
