--- a/.github/workflows/api-tests.yml
+++ b/.github/workflows/api-tests.yml
@@ -62,39 +62,11 @@ jobs:
         path: test-results/test-report.html
         retention-days: 7
 
-  dummyjson-only:
-    name: DummyJSON Tests Only
-    runs-on: ubuntu-latest
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Run DummyJSON Tests Only
-      run: npm run test:dummy
-      
-    - name: Upload DummyJSON results
-      uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: dummyjson-test-results
-        path: test-results/
-        retention-days: 7
-
   pr-comment:
     name: Comment on PR
     runs-on: ubuntu-latest
     if: github.event_name == 'pull_request'
-    needs: [api-tests, dummyjson-only]
+    needs: [api-tests]
     
     steps:
     - name: Comment PR with test results
